
include_directories(.)
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(apps)
ADD_SUBDIRECTORY(Events)
ADD_SUBDIRECTORY(services)
#ADD_SUBDIRECTORY(blockchain_service)
#ADD_SUBDIRECTORY(bcInvoicer)
#ADD_SUBDIRECTORY(bcTop)
#ADD_SUBDIRECTORY(bcNode)
#ADD_SUBDIRECTORY(Events)
IF(ENABLE_QT_GUI)
    ADD_SUBDIRECTORY(guiapp/blockchain_app)
ENDIF()
