#cmake_minimum_required (VERSION 2.6)

#project(dfsCore)



add_library(blockchain-system-common STATIC

#GenerateCompanyHtml.cpp
#blockchainClientType.cpp
blockchainHandler.cpp
#blockchain_sign.cpp
#keyStore.cpp
#systemConfig.cpp
#BlockchainProcessor.cpp

)
#install(TARGETS blockchain-system-common DESTINATION ${LIB_TARGET_DIR})

